--- a/kaggle-competition/titanic.ipynb
+++ b/kaggle-competition/titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHe5GQB9F13Rl1BEptDe+u",
+      "authorship_tag": "ABX9TyMTqWEJEnC3BMPEwwXOlTFy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1022,12 +1022,12 @@
         "df_data.head(10)"
       ],
       "metadata": {
-        "id": "sbx_XxAd3irj",
-        "outputId": "78e1db7a-f0ab-46f2-8090-08aa5848da17",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
-        }
+        },
+        "id": "sbx_XxAd3irj",
+        "outputId": "78e1db7a-f0ab-46f2-8090-08aa5848da17"
       },
       "execution_count": 81,
       "outputs": [
@@ -1304,12 +1304,12 @@
         "df_data.head()"
       ],
       "metadata": {
-        "id": "LABarwC1352f",
-        "outputId": "f5d138e3-44fd-49ad-c1ce-3070ff9c1409",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
-        }
+        },
+        "id": "LABarwC1352f",
+        "outputId": "f5d138e3-44fd-49ad-c1ce-3070ff9c1409"
       },
       "execution_count": 85,
       "outputs": [
@@ -3134,12 +3134,12 @@
         "#files.download(\"confidence.csv\")"
       ],
       "metadata": {
-        "id": "OQpKzKnB1ct8",
-        "outputId": "63ef0aff-3a24-4fdc-d2f4-b6c94a2085f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "id": "OQpKzKnB1ct8",
+        "outputId": "63ef0aff-3a24-4fdc-d2f4-b6c94a2085f6"
       },
       "execution_count": 69,
       "outputs": [
@@ -3238,11 +3238,11 @@
         "submission_comments = input(\"Enter comments to enter with your submission: \")"
       ],
       "metadata": {
-        "id": "ODx3WIBWIizf",
-        "outputId": "1423ea42-49aa-4c45-fee1-be5a2220225c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ODx3WIBWIizf",
+        "outputId": "1423ea42-49aa-4c45-fee1-be5a2220225c"
       },
       "execution_count": 135,
       "outputs": [
@@ -3262,12 +3262,12 @@
         "submission_filename"
       ],
       "metadata": {
-        "id": "T4knF1RwMMsL",
-        "outputId": "ee69a10f-1795-41d4-f4a4-fee9fdf9280e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 58
-        }
+        },
+        "id": "T4knF1RwMMsL",
+        "outputId": "ee69a10f-1795-41d4-f4a4-fee9fdf9280e"
       },
       "execution_count": 157,
       "outputs": [
@@ -3316,6 +3316,30 @@
           "name": "stdout",
           "text": [
             "\r  0% 0.00/2.77k [00:00<?, ?B/s]\r100% 2.77k/2.77k [00:00<00:00, 13.6kB/s]\n",
+            "Successfully submitted to Titanic - Machine Learning from Disaster"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!kaggle competitions submit -c titanic -f 529a87d9-d220-42d3-9b00-9e289bb42256.csv -m \"updated model2\" "
+      ],
+      "metadata": {
+        "id": "wZPSvQ4SBipz",
+        "outputId": "07bb09ba-b78a-45c9-b856-430885d21b32",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 164,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\r  0% 0.00/2.77k [00:00<?, ?B/s]\r100% 2.77k/2.77k [00:00<00:00, 12.5kB/s]\n",
             "Successfully submitted to Titanic - Machine Learning from Disaster"
           ]
         }
