--- a/computer-vision/image_segmentation.ipynb
+++ b/computer-vision/image_segmentation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNa+OSr+iP7gx8zrIhxuz7x",
+      "authorship_tag": "ABX9TyONcLYr4X4+DKUDuAoHz2db",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,175 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!wget http://www.robots.ox.ac.uk/~vgg/data/pets/data/images.tar.gz"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QS7P_WgeI7Bu",
+        "outputId": "5fbf33ba-1961-4a1f-e382-f0479b838c59"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2022-09-16 11:52:39--  http://www.robots.ox.ac.uk/~vgg/data/pets/data/images.tar.gz\n",
+            "Resolving www.robots.ox.ac.uk (www.robots.ox.ac.uk)... 129.67.94.2\n",
+            "Connecting to www.robots.ox.ac.uk (www.robots.ox.ac.uk)|129.67.94.2|:80... connected.\n",
+            "HTTP request sent, awaiting response... 301 Moved Permanently\n",
+            "Location: https://www.robots.ox.ac.uk/~vgg/data/pets/data/images.tar.gz [following]\n",
+            "--2022-09-16 11:52:39--  https://www.robots.ox.ac.uk/~vgg/data/pets/data/images.tar.gz\n",
+            "Connecting to www.robots.ox.ac.uk (www.robots.ox.ac.uk)|129.67.94.2|:443... connected.\n",
+            "HTTP request sent, awaiting response... 301 Moved Permanently\n",
+            "Location: https://thor.robots.ox.ac.uk/~vgg/data/pets/images.tar.gz [following]\n",
+            "--2022-09-16 11:52:39--  https://thor.robots.ox.ac.uk/~vgg/data/pets/images.tar.gz\n",
+            "Resolving thor.robots.ox.ac.uk (thor.robots.ox.ac.uk)... 129.67.95.98\n",
+            "Connecting to thor.robots.ox.ac.uk (thor.robots.ox.ac.uk)|129.67.95.98|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 791918971 (755M) [application/octet-stream]\n",
+            "Saving to: ‘images.tar.gz’\n",
+            "\n",
+            "images.tar.gz       100%[===================>] 755.23M  31.5MB/s    in 25s     \n",
+            "\n",
+            "2022-09-16 11:53:05 (30.0 MB/s) - ‘images.tar.gz’ saved [791918971/791918971]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://thor.robots.ox.ac.uk/~vgg/data/pets/annotations.tar.gz"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tTU6xgbFJKNm",
+        "outputId": "8c8ca9c6-ee1e-4e21-c3dd-fd5a925b9fc3"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2022-09-16 11:56:08--  https://thor.robots.ox.ac.uk/~vgg/data/pets/annotations.tar.gz\n",
+            "Resolving thor.robots.ox.ac.uk (thor.robots.ox.ac.uk)... 129.67.95.98\n",
+            "Connecting to thor.robots.ox.ac.uk (thor.robots.ox.ac.uk)|129.67.95.98|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 19173078 (18M) [application/octet-stream]\n",
+            "Saving to: ‘annotations.tar.gz’\n",
+            "\n",
+            "annotations.tar.gz  100%[===================>]  18.28M  14.4MB/s    in 1.3s    \n",
+            "\n",
+            "2022-09-16 11:56:09 (14.4 MB/s) - ‘annotations.tar.gz’ saved [19173078/19173078]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ls -l"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LAf3NU1qJa6R",
+        "outputId": "e0087f81-2114-4462-9d60-65fa145217b6"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "total 792092\n",
+            "-rw-r--r-- 1 root root  19173078 Jul 29 08:44 annotations.tar.gz\n",
+            "-rw-r--r-- 1 root root 791918971 Jul 29 08:44 images.tar.gz\n",
+            "drwxr-xr-x 1 root root      4096 Sep 14 13:44 \u001b[0m\u001b[01;34msample_data\u001b[0m/\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tar -xf annotations.tar.gz\n",
+        "!tar -xf images.tar.gz"
+      ],
+      "metadata": {
+        "id": "4HtjM71nKNVL"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ls -lrt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V6jd7-X7KWzA",
+        "outputId": "c9e476eb-c39b-4279-e6ec-aed5f8c7292a"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "total 792384\n",
+            "drwxr-xr-x 2 1001  1001    294912 Jun 18  2012 \u001b[0m\u001b[01;34mimages\u001b[0m/\n",
+            "drwxr-xr-x 4  501 staff      4096 Jun 30  2012 \u001b[01;34mannotations\u001b[0m/\n",
+            "-rw-r--r-- 1 root root   19173078 Jul 29 08:44 annotations.tar.gz\n",
+            "-rw-r--r-- 1 root root  791918971 Jul 29 08:44 images.tar.gz\n",
+            "drwxr-xr-x 1 root root       4096 Sep 14 13:44 \u001b[01;34msample_data\u001b[0m/\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mu9lGPeIMUCj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "fPw5SMHNIi4B"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vCXAciNEI4XQ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
