data processing complete. Model building and testing pending

--- a/computer-vision/5_image_segmentation.ipynb
+++ b/computer-vision/5_image_segmentation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFbx3+oNPwVK938XgDk1hS",
+      "authorship_tag": "ABX9TyNHAtdDfsWK1ghXX4992miz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,33 +37,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QS7P_WgeI7Bu",
-        "outputId": "4ce66eb7-a72e-4185-fe6d-efcc60099ff3"
+        "outputId": "3642c2e7-33c4-4b40-f485-dd245922cd0a"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-09-17 13:36:35--  http://www.robots.ox.ac.uk/~vgg/data/pets/data/images.tar.gz\n",
+            "--2022-09-18 16:51:35--  http://www.robots.ox.ac.uk/~vgg/data/pets/data/images.tar.gz\n",
             "Resolving www.robots.ox.ac.uk (www.robots.ox.ac.uk)... 129.67.94.2\n",
             "Connecting to www.robots.ox.ac.uk (www.robots.ox.ac.uk)|129.67.94.2|:80... connected.\n",
             "HTTP request sent, awaiting response... 301 Moved Permanently\n",
             "Location: https://www.robots.ox.ac.uk/~vgg/data/pets/data/images.tar.gz [following]\n",
-            "--2022-09-17 13:36:36--  https://www.robots.ox.ac.uk/~vgg/data/pets/data/images.tar.gz\n",
+            "--2022-09-18 16:51:36--  https://www.robots.ox.ac.uk/~vgg/data/pets/data/images.tar.gz\n",
             "Connecting to www.robots.ox.ac.uk (www.robots.ox.ac.uk)|129.67.94.2|:443... connected.\n",
             "HTTP request sent, awaiting response... 301 Moved Permanently\n",
             "Location: https://thor.robots.ox.ac.uk/~vgg/data/pets/images.tar.gz [following]\n",
-            "--2022-09-17 13:36:36--  https://thor.robots.ox.ac.uk/~vgg/data/pets/images.tar.gz\n",
+            "--2022-09-18 16:51:36--  https://thor.robots.ox.ac.uk/~vgg/data/pets/images.tar.gz\n",
             "Resolving thor.robots.ox.ac.uk (thor.robots.ox.ac.uk)... 129.67.95.98\n",
             "Connecting to thor.robots.ox.ac.uk (thor.robots.ox.ac.uk)|129.67.95.98|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 791918971 (755M) [application/octet-stream]\n",
             "Saving to: ‘images.tar.gz’\n",
             "\n",
-            "images.tar.gz       100%[===================>] 755.23M  31.7MB/s    in 24s     \n",
+            "images.tar.gz       100%[===================>] 755.23M  29.0MB/s    in 27s     \n",
             "\n",
-            "2022-09-17 13:37:01 (31.1 MB/s) - ‘images.tar.gz’ saved [791918971/791918971]\n",
+            "2022-09-18 16:52:03 (28.4 MB/s) - ‘images.tar.gz’ saved [791918971/791918971]\n",
             "\n"
           ]
         }
@@ -79,15 +79,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tTU6xgbFJKNm",
-        "outputId": "d8250e43-70d2-4b57-f244-1dfa34c7711c"
+        "outputId": "2ad20071-828e-457d-bb1d-c7b53a3d9ec9"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-09-17 13:37:01--  https://thor.robots.ox.ac.uk/~vgg/data/pets/annotations.tar.gz\n",
+            "--2022-09-18 16:52:03--  https://thor.robots.ox.ac.uk/~vgg/data/pets/annotations.tar.gz\n",
             "Resolving thor.robots.ox.ac.uk (thor.robots.ox.ac.uk)... 129.67.95.98\n",
             "Connecting to thor.robots.ox.ac.uk (thor.robots.ox.ac.uk)|129.67.95.98|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -96,7 +96,7 @@
             "\n",
             "annotations.tar.gz  100%[===================>]  18.28M  15.7MB/s    in 1.2s    \n",
             "\n",
-            "2022-09-17 13:37:03 (15.7 MB/s) - ‘annotations.tar.gz’ saved [19173078/19173078]\n",
+            "2022-09-18 16:52:05 (15.7 MB/s) - ‘annotations.tar.gz’ saved [19173078/19173078]\n",
             "\n"
           ]
         }
@@ -112,9 +112,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LAf3NU1qJa6R",
-        "outputId": "e95595b7-ade0-4768-e0f0-6e6b2694dc79"
+        "outputId": "a870fbc5-1088-4a95-89bd-c7337fbf37ed"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
       "metadata": {
         "id": "4HtjM71nKNVL"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -150,9 +150,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V6jd7-X7KWzA",
-        "outputId": "3cffc181-4a14-4049-ef0d-ea47428f9875"
+        "outputId": "b6572225-fbcb-4d90-e417-81ae2ac9ad1d"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,7 +176,7 @@
       "metadata": {
         "id": "mu9lGPeIMUCj"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -187,7 +187,7 @@
       "metadata": {
         "id": "CGnQZPteWYl-"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -203,7 +203,7 @@
       "metadata": {
         "id": "w4iiD8VoWggk"
       },
-      "execution_count": 41,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "jC1EIPlKXm6a"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -230,7 +230,7 @@
       "metadata": {
         "id": "5tp1L5GnW5JQ"
       },
-      "execution_count": 42,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -241,12 +241,12 @@
       "metadata": {
         "id": "I37EGi6MX185"
       },
-      "execution_count": 43,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 13,
       "metadata": {
         "id": "fPw5SMHNIi4B"
       },
@@ -266,13 +266,13 @@
       ],
       "metadata": {
         "id": "GJDdjqmcY08H",
-        "outputId": "26d3bbdc-c2b9-45ed-e9c4-201fb55745fa",
+        "outputId": "1416bf36-f2b2-43c2-9eee-54e47c4459c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 290
         }
       },
-      "execution_count": 45,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -295,13 +295,13 @@
       ],
       "metadata": {
         "id": "1Z5JytIKsi6r",
-        "outputId": "851eaafe-b5bf-4992-c180-52694902fa88",
+        "outputId": "e0df2352-4400-4bbe-d3ab-cbc48fcbad70",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 58
         }
       },
-      "execution_count": 46,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -314,7 +314,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 15
         }
       ]
     },
@@ -325,12 +325,12 @@
       ],
       "metadata": {
         "id": "g9qVsClqaCTX",
-        "outputId": "b65e423a-9cee-4de0-d7e2-b34f795ce75b",
+        "outputId": "7d0bb6b0-a1d5-4e0c-bc4d-e0b6ed5139da",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +340,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 16
         }
       ]
     },
@@ -351,13 +351,13 @@
       ],
       "metadata": {
         "id": "BpaKymZVseo1",
-        "outputId": "3710fbd9-f34b-4a83-8962-2e53270bd229",
+        "outputId": "a481aeae-7d4d-4afd-adea-67232aaca34a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 58
         }
       },
-      "execution_count": 48,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -370,7 +370,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 17
         }
       ]
     },
@@ -382,18 +382,18 @@
       "metadata": {
         "id": "6lfI2Wu-Z5Yd"
       },
-      "execution_count": 49,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "y = img_to_array(load_img(x))"
+        "y = img_to_array(load_img(x)).astype(\"uint8\")"
       ],
       "metadata": {
         "id": "I6LfXns1Z7TF"
       },
-      "execution_count": 65,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -403,12 +403,12 @@
       ],
       "metadata": {
         "id": "VXG28zIPqx4Z",
-        "outputId": "821600ba-7e4f-4cda-a751-418dcf06c20f",
+        "outputId": "dcd770b5-01eb-4d8b-a25d-3d23770d3fc3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 66,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -418,19 +418,19 @@
             ]
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 20
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "y = (y - 1)*10"
+        "y = (y - 1)*127"
       ],
       "metadata": {
         "id": "lLX6VhqcrLxL"
       },
-      "execution_count": 67,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -441,13 +441,13 @@
       ],
       "metadata": {
         "id": "QmfM4b_YZFXp",
-        "outputId": "641fbcea-de9c-4fb1-cc17-994a8dadf9e3",
+        "outputId": "d1a3b2b0-d00c-44d8-aff8-e46818457871",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 290
         }
       },
-      "execution_count": 68,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -465,9 +465,166 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import numpy as np\n",
+        "import random"
+      ],
       "metadata": {
         "id": "vCXAciNEI4XQ"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "img_size = (200, 200)"
+      ],
+      "metadata": {
+        "id": "cOAIiMfOPux9"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_images = len (image_files)"
+      ],
+      "metadata": {
+        "id": "8br9Y8L9Py-A"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random.Random(1337).shuffle(image_files)\n",
+        "random.Random(1337).shuffle(annotation_files)"
+      ],
+      "metadata": {
+        "id": "cL0nGaNUQC1f"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def img_array(path):\n",
+        "  return img_to_array(load_img(path, target_size = img_size))"
+      ],
+      "metadata": {
+        "id": "v098nYNkQe3u"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def annotation_array(path):\n",
+        "  return img_to_array(load_img(path, target_size=img_size, color_mode='grayscale')).astype(\"uint8\") - 1"
+      ],
+      "metadata": {
+        "id": "oOzF9q8PREUq"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_images = np.zeros((num_images,) + img_size + (3,), dtype=\"float32\")"
+      ],
+      "metadata": {
+        "id": "aO-otuUMRlQ-"
+      },
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_images.shape"
+      ],
+      "metadata": {
+        "id": "asdhQyewgvUF",
+        "outputId": "e6c9c34e-aed3-4078-e681-654f6903bdcc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(7390, 200, 200, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "targets = np.zeros((num_images, ) + img_size + (1,), dtype=\"uint8\")"
+      ],
+      "metadata": {
+        "id": "yhqN-BlEg1Qw"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "targets.shape"
+      ],
+      "metadata": {
+        "id": "QIIjPegjhYlq",
+        "outputId": "0790aa72-94ca-4f46-d30a-b7d5a8e49211",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(7390, 200, 200, 1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(num_images):\n",
+        "  input_images[i] = img_array(src_dir_images / image_files[i])\n",
+        "  targets[i] = annotation_array(src_dir_annotations / annotation_files[i])"
+      ],
+      "metadata": {
+        "id": "QdIa1WyjhbK3"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QGDJnnERh4B9"
       },
       "execution_count": null,
       "outputs": []
