--- a/NLP/RNN_IMDB_Movie_Review.ipynb
+++ b/NLP/RNN_IMDB_Movie_Review.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMwltK784XR2M3vgNCXVF97",
+      "authorship_tag": "ABX9TyN48CdE+3+2f5lSDy3TYK8d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,146 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!curl -O https://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QSMf4Y9bP34C",
+        "outputId": "80543523-7ff5-4b04-ec60-80a2441f8ed2"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+            "100 80.2M  100 80.2M    0     0  21.7M      0  0:00:03  0:00:03 --:--:-- 21.7M\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tar -xf aclImdb_v1.tar.gz"
+      ],
+      "metadata": {
+        "id": "prbj9z6eP_Mu"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls -l"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w2O8AkFuQKgP",
+        "outputId": "63cd4c60-90f9-4e55-ad1f-ed5a854c1352"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "total 82164\n",
+            "drwxr-xr-x 4 7297 1000     4096 Jun 26  2011 aclImdb\n",
+            "-rw-r--r-- 1 root root 84125825 Dec 26 02:25 aclImdb_v1.tar.gz\n",
+            "drwxr-xr-x 1 root root     4096 Dec 20 20:19 sample_data\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!rm -r aclImdb/train/unsup"
+      ],
+      "metadata": {
+        "id": "uKv9H7HrQRxK"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cat aclImdb/train/pos/4077_10.txt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "npJQuGS8Q5o-",
+        "outputId": "bfd1b092-e580-46b4-9a17-c5d5a692d801"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I first saw this back in the early 90s on UK TV, i did like it then but i missed the chance to tape it, many years passed but the film always stuck with me and i lost hope of seeing it TV again, the main thing that stuck with me was the end, the hole castle part really touched me, its easy to watch, has a great story, great music, the list goes on and on, its OK me saying how good it is but everyone will take there own best bits away with them once they have seen it, yes the animation is top notch and beautiful to watch, it does show its age in a very few parts but that has now become part of it beauty, i am so glad it has came out on DVD as it is one of my top 10 films of all time. Buy it or rent it just see it, best viewing is at night alone with drink and food in reach so you don't have to stop the film.<br /><br />Enjoy"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os, pathlib, shutil, random"
+      ],
+      "metadata": {
+        "id": "HDMUQz35SaEV"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base_dir = pathlib.Path(\"aclImdb\")\n",
+        "val_dir = base_dir / \"val\"\n",
+        "train_dir = base_dir / \"train\""
+      ],
+      "metadata": {
+        "id": "TC5aWBDWSiuN"
+      },
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for category in (\"pos\", \"neg\"):\n",
+        "  os.makedirs(val_dir / category)\n",
+        "  files = os.listdir(train_dir / category)\n",
+        "  random.Random(1337).shuffle(files)\n",
+        "  num_of_val_files = int(len(files) * 0.2)\n",
+        "\n",
+        "  val_files = files[-num_of_val_files:]\n",
+        "\n",
+        "  for fname in val_files:\n",
+        "    shutil.move(train_dir / category / fname, val_dir / category / fname)"
+      ],
+      "metadata": {
+        "id": "k1UVcksMS0ty"
+      },
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": 1,
       "metadata": {
         "id": "pfF47Zlq3j8A"
@@ -38,6 +178,15 @@
         "from tensorflow import keras\n",
         "from keras import layers\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "et5TpCKBU8Mm"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
