calling the layer directly vs calling model.predict()

--- a/NLP/TextVectorization_Int_vs_Multi_Hot.ipynb
+++ b/NLP/TextVectorization_Int_vs_Multi_Hot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJWOEcEsi0UqXz5Bxu+NqB",
+      "authorship_tag": "ABX9TyOgkX8k3H8H9gmVgeY/kz39",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 48,
       "metadata": {
         "id": "4sAlQqjqUsdK"
       },
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "uu9xdhb4U1YO"
       },
-      "execution_count": 29,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "knmhZQMdVEDN"
       },
-      "execution_count": 30,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -69,12 +69,13 @@
       "metadata": {
         "id": "h_9uSC6QVHZ_"
       },
-      "execution_count": 31,
+      "execution_count": 51,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#comment this section if you are trying the \"multi_hot\" mode. Notice the differenc when you call the model.predict or the layer directly on the data\n",
         "vectorize_layer = TextVectorization(\n",
         "    max_tokens=max_features,\n",
         "    output_mode=\"int\",\n",
@@ -84,12 +85,13 @@
       "metadata": {
         "id": "1TIJj2-rVL56"
       },
-      "execution_count": 33,
+      "execution_count": 52,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#Comment this section if you are trying out the \"int\" mode. Notice the differenc when you call the model.predict or the layer directly on the data\n",
         "vectorize_layer = TextVectorization(\n",
         "    max_tokens=max_features,\n",
         "    output_mode=\"multi_hot\"\n",
@@ -98,7 +100,7 @@
       "metadata": {
         "id": "N4tQUo0kdJBT"
       },
-      "execution_count": 34,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -109,7 +111,7 @@
       "metadata": {
         "id": "KGzsCv7XVchC"
       },
-      "execution_count": 35,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -120,7 +122,7 @@
       "metadata": {
         "id": "Qh0LH47-VjvB"
       },
-      "execution_count": 36,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -131,7 +133,7 @@
       "metadata": {
         "id": "PGwVGCC_Vs16"
       },
-      "execution_count": 37,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -142,7 +144,7 @@
       "metadata": {
         "id": "m4GxdLMUV1EL"
       },
-      "execution_count": 38,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -153,8 +155,40 @@
       "metadata": {
         "id": "PbhgkPYHV9Rv"
       },
-      "execution_count": 46,
+      "execution_count": 58,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "vectorize_layer(input_data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "99WwwPEdsMOp",
+        "outputId": "010fe63f-6e41-4615-a803-4182d2ea4b96"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(5, 4), dtype=int64, numpy=\n",
+              "array([[1, 1, 1, 0],\n",
+              "       [1, 1, 0, 0],\n",
+              "       [1, 1, 1, 0],\n",
+              "       [1, 1, 1, 0],\n",
+              "       [1, 0, 0, 0]])>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -166,15 +200,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8NfYNDoHWG39",
-        "outputId": "4f6f839a-0458-4024-c67d-a93990d8e9af"
+        "outputId": "a567f72b-fa81-4e0f-8922-cf5d7d169938"
       },
-      "execution_count": 47,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 37ms/step\n"
+            "1/1 [==============================] - 0s 129ms/step\n"
           ]
         },
         {
@@ -189,7 +223,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 59
         }
       ]
     },
@@ -201,7 +235,7 @@
       "metadata": {
         "id": "4FVppmi3WK1D"
       },
-      "execution_count": 13,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -217,7 +251,7 @@
       "metadata": {
         "id": "w3pcJe1bWu1m"
       },
-      "execution_count": 22,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -230,9 +264,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4V2ZJLgoXBoz",
-        "outputId": "bfb0a750-4e76-45c2-eb80-cf750dbee7c9"
+        "outputId": "35d4ee34-08cc-4203-b382-389d62c07edc"
       },
-      "execution_count": 16,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -242,7 +276,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 62
         }
       ]
     },
@@ -256,19 +290,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VN4-m36YXKH9",
-        "outputId": "172736d2-bea8-4dfd-dda8-84c38b6d465e"
+        "outputId": "a167e3d9-2387-4df8-f635-365aabb1de85"
       },
-      "execution_count": 43,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['[UNK]', 'foo', 'baz', 'bar']"
+              "['', '[UNK]', 'earth', 'wind', 'and', 'fire']"
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 63
         }
       ]
     }
