Text vectorization layer refresher

--- a/NLP/RNN.ipynb
+++ b/NLP/RNN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMwltK784XR2M3vgNCXVF97",
+      "authorship_tag": "ABX9TyOnNb8zKoOxq8/HP14Pyq6O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kBugSBl5vRj8",
-        "outputId": "cf4f4a08-c145-4442-fcc2-3f3b9269ef59"
+        "outputId": "f19005f7-66e1-428c-f5b6-0fd77436fa79"
       },
       "execution_count": 5,
       "outputs": [
@@ -114,13 +114,13 @@
       "cell_type": "code",
       "source": [
         "dataset = [\n",
-        "    \"hello, this, is a sample text which I'd like to test on Text Vecrotization leayer of keras. This should/, help in NLP\"\n",
+        "    \"hello, this, is a sample text which I'd like to test on Text Vecrotization leayer of keras. This should/, help in NLP. How?\"\n",
         "]"
       ],
       "metadata": {
         "id": "RvrDqo6IIz4t"
       },
-      "execution_count": 25,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -131,7 +131,7 @@
       "metadata": {
         "id": "EDXsDfeFJED9"
       },
-      "execution_count": 26,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -142,8 +142,56 @@
       "metadata": {
         "id": "c2AlbLGmJJX6"
       },
-      "execution_count": 27,
+      "execution_count": 15,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vocab"
+      ],
+      "metadata": {
+        "id": "wzL6ojMjlBdT",
+        "outputId": "66b8979f-b371-41dc-db1a-e401927d8cd4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['',\n",
+              " '[UNK]',\n",
+              " 'this',\n",
+              " 'text',\n",
+              " 'which',\n",
+              " 'vecrotization',\n",
+              " 'to',\n",
+              " 'test',\n",
+              " 'should',\n",
+              " 'sample',\n",
+              " 'on',\n",
+              " 'of',\n",
+              " 'nlp',\n",
+              " 'like',\n",
+              " 'leayer',\n",
+              " 'keras',\n",
+              " 'is',\n",
+              " 'in',\n",
+              " 'id',\n",
+              " 'how',\n",
+              " 'help',\n",
+              " 'hello',\n",
+              " 'a']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -153,7 +201,7 @@
       "metadata": {
         "id": "BehgMIR2JW3U"
       },
-      "execution_count": 28,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -166,9 +214,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "62nFOURtLqyK",
-        "outputId": "55b84581-7cd4-4d53-826e-12bd1b240d0c"
+        "outputId": "69607e18-0a6a-4d92-de0e-5a9af8e04db2"
       },
-      "execution_count": 29,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,13 +230,84 @@
     {
       "cell_type": "code",
       "source": [
+        "print(encoded_sentense)"
+      ],
+      "metadata": {
+        "id": "5Bt0KeVrlhrx",
+        "outputId": "cf28418d-79b8-46f6-bf05-287894253e3f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor([21 19  1  1  1  1 12  3  1  1 15], shape=(11,), dtype=int64)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "inverse_vocab = dict(enumerate(vocab))"
       ],
       "metadata": {
         "id": "6Dq6unsbK21x"
       },
-      "execution_count": 30,
+      "execution_count": 19,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inverse_vocab"
+      ],
+      "metadata": {
+        "id": "G2kwnQwVlorX",
+        "outputId": "0488f132-abc1-48e6-cfa9-cee39611aaf5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{0: '',\n",
+              " 1: '[UNK]',\n",
+              " 2: 'this',\n",
+              " 3: 'text',\n",
+              " 4: 'which',\n",
+              " 5: 'vecrotization',\n",
+              " 6: 'to',\n",
+              " 7: 'test',\n",
+              " 8: 'should',\n",
+              " 9: 'sample',\n",
+              " 10: 'on',\n",
+              " 11: 'of',\n",
+              " 12: 'nlp',\n",
+              " 13: 'like',\n",
+              " 14: 'leayer',\n",
+              " 15: 'keras',\n",
+              " 16: 'is',\n",
+              " 17: 'in',\n",
+              " 18: 'id',\n",
+              " 19: 'how',\n",
+              " 20: 'help',\n",
+              " 21: 'hello',\n",
+              " 22: 'a'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -198,7 +317,7 @@
       "metadata": {
         "id": "PYtv64ljLH2-"
       },
-      "execution_count": 31,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -211,27 +330,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PXeqRJBVLvjV",
-        "outputId": "dcb0c6a0-4804-41be-f101-aa3111f32f70"
+        "outputId": "8716fba8-ee12-4096-dcf1-4d9eadfbf02d"
       },
-      "execution_count": 32,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello [UNK] [UNK] [UNK] [UNK] [UNK] nlp text [UNK] [UNK] keras\n"
+            "hello how [UNK] [UNK] [UNK] [UNK] nlp text [UNK] [UNK] keras\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "kyaIA4K2L6uv"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
